--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -18,29 +17,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/EmailEditext"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_marginTop="32dp"
+            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="#707070"
-            android:textColorHint="#707070"
-            android:ems="10"
             android:hint="Email*"
-            android:inputType="textEmailAddress"
-            android:autofillHints="" />
+            app:startIconDrawable="@drawable/ic_baseline_email_24"
+            app:hintAnimationEnabled="true">
 
-        <EditText
-            android:id="@+id/PasswordEditext"
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EmailEditext"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:inputType="textEmailAddress" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_marginTop="10dp"
+            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:backgroundTint="#707070"
-            android:textColorHint="#707070"
-            android:ems="10"
-            android:hint="password*"
-            android:inputType="textPassword"
-            android:autofillHints="" />
+            android:hint="Password*"
+            android:labelFor="@+id/editextgoogle"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/black"
+            app:hintAnimationEnabled="true">
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/PasswordEditext"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:maxLength="20"
+                android:inputType="textPassword" />
+
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/buttonRegister"
